# transxlab

./: .gitignore  Cargo.toml  LICENSE  NEXT.md  PLAN.md  README.md  TransXLab Concept.md  probe.py
.github/workflows/: ci.yml
docs/: blog-ac-v2.html  index.html  launch-drafts.md
examples/: README.md  ac_design_inputs.yaml  ac_v2_config.yaml
examples/01_sentiment_classifier/: answers.yaml  config.yaml
examples/01_sentiment_classifier/data/: train.jsonl
examples/02_code_assistant/: answers.yaml  config.yaml
examples/02_code_assistant/data/: train.jsonl
examples/03_creative_writer/: answers.yaml
examples/03_creative_writer/data/: train.jsonl
examples/04_bad_config_demo/: answers.yaml  config.yaml
examples/04_bad_config_demo/data/: train.jsonl
src/: error.rs  lib.rs
src/data_strategy/: analyzer.rs  mod.rs  sources.rs  strategy.rs
src/design/: architecture.rs  configgen.rs  cost.rs  heuristics.rs  interview.rs  mod.rs  spec.rs
src/knowledge/: failures.rs  hub.rs  lessons.rs  mod.rs  models.rs  rules.rs
src/preflight/: config.rs  data.rs  environment.rs  mod.rs  paths.rs  report.rs  resources.rs  runner.rs
tests/: test_data_strategy.py  test_design.py  test_preflight.py
