[package]
name = "transxlab"
version = "0.1.0"
edition = "2021"
description = "Training architect: design, validate, and preflight ML training runs."

[[bin]]
name = "transxlab"
path = "src/bin/transxlab.rs"

[lib]
name = "transxlab"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ureq = "2"
